# Emulator CMakeLists.txt

add_subdirectory(Files)
add_subdirectory(Host)
add_subdirectory(JIT)
add_subdirectory(Log)
add_subdirectory(NativeCalls)
add_subdirectory(Network)
add_subdirectory(PCMCIA)
add_subdirectory(Platform)
add_subdirectory(ROM)
add_subdirectory(Screen)
add_subdirectory(Serial)
add_subdirectory(Sound)
